ssoar-etc/ssoar.info/configuration/iptables/iptables-save.conf
# Generated by iptables-save v1.4.21 on Thu Apr 14 17:19:38 2016
*raw
:PREROUTING ACCEPT [763791298:632131091438]
:OUTPUT ACCEPT [746415013:984577897840]
COMMIT
# Completed on Thu Apr 14 17:19:38 2016
# Generated by iptables-save v1.4.21 on Thu Apr 14 17:19:38 2016
*mangle
:PREROUTING ACCEPT [763791298:632131091438]
:INPUT ACCEPT [763791298:632131091438]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [746415013:984577897840]
:POSTROUTING ACCEPT [746413107:984577659007]
COMMIT
# Completed on Thu Apr 14 17:19:38 2016
# Generated by iptables-save v1.4.21 on Thu Apr 14 17:19:38 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -d 87.106.249.160/32 -p tcp -m tcp --sport 1024:65535 --dport 21 -j ACCEPT
-A INPUT -d 87.106.249.160/32 -p tcp -m tcp --sport 1024:65535 --dport 990 -j ACCEPT
-A INPUT -d 87.106.249.160/32 -p tcp -m tcp --sport 1024:65535 --dport 13330:13340 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 87.106.249.160/32 -p tcp -m tcp --sport 3690 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
-A INPUT -s 193.175.238.0/24 -d 87.106.249.160/32 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 193.175.238.0/24 -d 87.106.249.160/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 193.175.238.14/32 -d 87.106.249.160/32 -p tcp -m tcp --sport 8080 --dport 1024:65535 -j ACCEPT
-A INPUT -s 193.175.239.0/24 -d 87.106.249.160/32 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 193.175.239.0/24 -d 87.106.249.160/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 193.196.10.0/24 -d 87.106.249.160/32 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 193.196.10.0/24 -d 87.106.249.160/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --sport 53 --dport 1024:65535 -j ACCEPT
-A INPUT -d 87.106.249.160/32 -p tcp -m tcp --sport 465 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -d 87.106.249.160/32 -p tcp -m tcp --sport 80 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 194.95.75.11/32 -d 87.106.249.160/32 -p tcp -m tcp --sport 8080 --dport 1024:65535 -j ACCEPT
-A INPUT -d 87.106.249.160/32 -p tcp -m tcp --sport 80 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 193.175.238.55/32 -d 87.106.249.160/32 -j ACCEPT
-A INPUT -s 193.175.238.55/32 -j ACCEPT
-A INPUT -s 193.175.238.0/24 -d 87.106.249.160/32 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -m limit --limit 15/min -j LOG --log-prefix "Dropped by firewall: " --log-level 7
-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -s 87.106.249.160/32 -p tcp -m tcp --sport 21 --dport 1024:65535 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -p tcp -m tcp --sport 990 --dport 1024:65535 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -p tcp -m tcp --sport 13330:13340 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -p tcp -m tcp --sport 1024:65535 --dport 3690 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 8443 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -p tcp -m tcp --dport 465 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --sport 1024:65535 --dport 53 -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -d 194.95.75.11/32 -p tcp -m tcp --sport 1024:65535 --dport 8080 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -d 193.175.238.14/32 -p tcp -m tcp --sport 1024:65535 --dport 8080 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -d 193.175.238.55/32 -j ACCEPT
-A OUTPUT -d 193.175.238.55/32 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -d 193.175.239.0/24 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -d 193.175.239.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -d 193.175.238.0/24 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -d 193.175.238.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -s 87.106.249.160/32 -d 193.175.238.124/32 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -m limit --limit 15/min -j LOG --log-prefix "Dropped by firewall: " --log-level 7
-A OUTPUT -j DROP
COMMIT
# Completed on Thu Apr 14 17:19:39 2016
# Generated by iptables-save v1.4.21 on Thu Apr 14 17:19:39 2016
*nat
:PREROUTING ACCEPT [1796742:104922476]
:INPUT ACCEPT [1773731:102794975]
:OUTPUT ACCEPT [3238854:213996457]
:POSTROUTING ACCEPT [3238824:213994081]
COMMIT
# Completed on Thu Apr 14 17:19:39 2016
